--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "helmet": "^3.12.1",
     "mongoose": "^5.1.3",
     "morgan": "^1.9.0",
-    "winston": "^2.4.2"
+    "winston": "^3.0.0-rc6"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.49",
