--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "compression": "^1.7.2",
+    "concat-stream": "^1.6.2",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "gridfs-stream": "^1.1.1",
     "helmet": "^3.12.1",
+    "http-status": "^1.1.2",
     "mongoose": "^5.1.3",
     "morgan": "^1.9.0",
     "winston": "^3.0.0-rc6"
