:pencil2: Rename to express-boilerplate

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-boilerplate",
+  "name": "express-boilerplate",
   "version": "1.0.0",
   "main": "dist",
   "author": "Antoine Colmard <a.colmard@gmail.com>",
