--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,18 @@
 {
-  "extends": "airbnb-base"
+  "extends": [
+    "eslint:recommended",
+    "plugin:import/errors",
+    "plugin:import/warnings",
+    "plugin:jest/recommended",
+    "prettier"
+  ],
+  "plugins": ["import", "jest", "prettier"],
+  "parserOptions": {
+    "sourceType": "module",
+    "ecmaVersion": 2020
+  },
+  "env": {
+    "node": true,
+    "es6": true
+  }
 }
