--- a/package.json
+++ b/package.json
@@ -1,42 +1,41 @@
 {
   "name": "express-boilerplate",
   "version": "1.0.0",
-  "main": "dist",
+  "type": "module",
+  "main": "./src/index.js",
   "author": "Antoine Colmard <a.colmard@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "if-env NODE_ENV=production && npm run -s serve || npm run -s dev",
-    "dev": "nodemon -w src --exec \"babel-node src\"",
-    "build": "babel src -s -D -d dist",
-    "preserve": "npm run -s build",
-    "serve": "cross-env NODE_ENV=production node dist",
-    "lint": "eslint ."
+    "start": "if-env NODE_ENV=production && yarn start:production || npm run start:development",
+    "start:development": "nodemon src/index.js",
+    "start:production": "node src/index.js",
+    "test": "jest",
+    "lint": "eslint src",
+    "format": "prettier --write src/**/*.js"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "compression": "^1.7.2",
-    "concat-stream": "^1.6.2",
-    "cors": "^2.8.4",
-    "dotenv": "^6.0.0",
-    "express": "^4.16.3",
-    "gridfs-stream": "^1.1.1",
-    "helmet": "^3.12.1",
-    "http-status": "^1.1.2",
-    "mongoose": "^5.1.3",
-    "morgan": "^1.9.0",
-    "winston": "^3.0.0-rc6"
+    "@hapi/boom": "^9.0.0",
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "filesize": "^6.1.0",
+    "helmet": "^3.21.3",
+    "lodash": "^4.17.15",
+    "mongoose": "^5.9.3",
+    "ora": "^4.0.3",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.49",
-    "@babel/core": "^7.0.0-beta.49",
-    "@babel/node": "^7.0.0-beta.49",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.49",
-    "@babel/preset-env": "^7.0.0-beta.49",
-    "cross-env": "^5.1.6",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.12.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jest": "^23.8.2",
+    "eslint-plugin-prettier": "^3.1.2",
     "if-env": "^1.0.4",
-    "nodemon": "^1.17.5"
+    "jest": "^25.1.0",
+    "nodemon": "^2.0.2",
+    "prettier": "^1.19.1"
   }
 }
