--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "lodash": "^4.17.15",
     "mongoose": "^5.9.3",
     "mongoose-unique-validator": "^2.0.3",
-    "ora": "^4.0.3",
+    "morgan": "^1.9.1",
     "winston": "^3.2.1"
   },
   "devDependencies": {
