--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "if-env NODE_ENV=production && yarn start:production || npm run start:development",
-    "start:development": "nodemon src/index.js",
+    "start:development": "nodemon src/index.js | pino-pretty",
     "start:production": "node src/index.js",
     "test": "jest",
     "lint": "eslint src",
@@ -20,13 +20,13 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-pino-logger": "^4.0.0",
     "filesize": "^6.1.0",
     "helmet": "^3.21.3",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.3",
     "mongoose-unique-validator": "^2.0.3",
-    "morgan": "^1.9.1",
-    "winston": "^3.2.1"
+    "pino": "^5.17.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
@@ -37,6 +37,7 @@
     "if-env": "^1.0.4",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
+    "pino-pretty": "^3.6.1",
     "prettier": "^1.19.1"
   }
 }
