:memo: Update package name and .env documentation

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-boilerplate",
+  "name": "express-mongoose-template",
   "version": "1.0.0",
   "type": "module",
   "main": "./src/index.js",
