--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "if-env NODE_ENV=production && yarn start:production || npm run start:development",
     "start:development": "nodemon src/index.js | pino-pretty",
-    "start:production": "node src/index.js",
+    "start:production": "cross-env NODE_ENV=production node src/index.js",
     "test": "jest",
     "lint": "eslint src",
     "format": "prettier --write src/**/*.js"
@@ -18,10 +18,10 @@
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-pino-logger": "^4.0.0",
-    "filesize": "^6.1.0",
     "helmet": "^3.21.3",
     "mongoose": "^5.9.3",
     "mongoose-unique-validator": "^2.0.3",
