--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "nodemon": "^2.0.2",
     "pino-pretty": "^3.6.1",
     "prettier": "^1.19.1"
+  },
+  "prettier": {
+    "printWidth": 100
   }
 }
