--- a/package.json
+++ b/package.json
@@ -39,6 +39,23 @@
     "pino-pretty": "^3.6.1",
     "prettier": "^1.19.1"
   },
+  "eslintConfig": {
+    "extends": [
+      "eslint:recommended",
+      "plugin:import/errors",
+      "plugin:import/warnings",
+      "plugin:jest/recommended",
+      "plugin:prettier/recommended"
+    ],
+    "parserOptions": {
+      "sourceType": "module",
+      "ecmaVersion": 2020
+    },
+    "env": {
+      "node": true,
+      "es6": true
+    }
+  },
   "prettier": {
     "printWidth": 100
   }
