:wrench: Use typed variables in .env

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # The port and host used by the HTTP server (more information here: https://nodejs.org/api/net.html#net_server_listen_port_host_backlog_callback)
 PORT=8080
-HOST=localhost
+HOST="localhost"
 
 # The MongoDB connection string (more information here: https://docs.mongodb.com/manual/reference/connection-string/)
-MONGODB_URL=mongodb://localhost:27017/example
+MONGODB_URL="mongodb://localhost:27017/example"
