--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "express-mongoose-template",
   "version": "1.0.0",
-  "type": "module",
   "main": "./src/index.js",
   "author": "Antoine Colmard <a.colmard@gmail.com>",
   "license": "MIT",
   "scripts": {
     "start": "if-env NODE_ENV=production && yarn start:production || npm run start:development",
-    "start:development": "nodemon src/index.js | pino-pretty",
-    "start:production": "cross-env NODE_ENV=production node src/index.js",
+    "start:development": "nodemon --exec \"babel-node src/index.js | pino-pretty\"",
+    "build": "babel src --out-dir dist",
+    "prestart:production": "yarn build",
+    "start:production": "cross-env NODE_ENV=production node dist/index.js",
     "test": "jest",
     "lint": "eslint src",
     "format": "prettier --write src/**/*.js"
@@ -28,6 +29,10 @@
     "pino": "^5.17.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.7",
+    "@babel/node": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
@@ -38,6 +43,18 @@
     "nodemon": "^2.0.2",
     "pino-pretty": "^3.6.1",
     "prettier": "^1.19.1"
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ]
+    ]
   },
   "eslintConfig": {
     "extends": [
