--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "if-env": "^1.0.4",
     "is-ci": "^2.0.0",
     "jest": "^25.1.0",
+    "jest-express": "^1.11.3",
     "nodemon": "^2.0.2",
     "pino-pretty": "^3.6.1",
     "prettier": "^1.19.1",
