--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Build
       uses: Borales/actions-yarn@v2.1.0
       with:
-        cmd: install
+        cmd: build
     - name: Test
       uses: Borales/actions-yarn@v2.1.0
       with:
