--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "start": "if-env NODE_ENV=production && yarn start:production || npm run start:development",
-    "start:development": "nodemon --exec \"babel-node src/index.js | pino-pretty\"",
+    "start:development": "nodemon --exec \"babel-node src/index.js\"",
     "prebuild": "rimraf dist",
     "build": "babel src --out-dir dist --ignore \"src/**/*.spec.js\",\"src/**/*.test.js\"",
     "prestart:production": "yarn build",
@@ -22,11 +22,10 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-pino-logger": "^5.0.0",
     "helmet": "^3.22.0",
     "mongoose": "^5.9.15",
     "mongoose-unique-validator": "^2.0.3",
-    "pino": "^6.2.1"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -45,7 +44,6 @@
     "jest-express": "^1.12.0",
     "jest-runner-eslint": "^0.8.0",
     "nodemon": "^2.0.4",
-    "pino-pretty": "^4.0.0",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2"
   },
