--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "helmet": "^3.22.0",
     "mongoose": "^5.9.15",
     "mongoose-unique-validator": "^2.0.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "ora": "^4.0.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
