--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
     "helmet": "^3.22.0",
     "mongoose": "^5.9.15",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
-    "ora": "^4.0.4"
+    "ora": "^4.0.4",
+    "rate-limit-mongo": "^2.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
