--- a/package.json
+++ b/package.json
@@ -23,29 +23,28 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.3",
-    "helmet": "^3.22.0",
-    "mongoose": "^5.9.15",
+    "helmet": "^3.23.0",
+    "mongoose": "^5.9.18",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
-    "ora": "^4.0.4",
-    "rate-limit-mongo": "^2.2.0"
+    "ora": "^4.0.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.6",
-    "@babel/node": "^7.8.7",
-    "@babel/preset-env": "^7.9.6",
+    "@babel/cli": "^7.10.1",
+    "@babel/core": "^7.10.2",
+    "@babel/node": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
     "cross-env": "^7.0.2",
-    "eslint": "^7.0.0",
+    "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jest": "^23.13.1",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jest": "^23.13.2",
     "eslint-plugin-prettier": "^3.1.3",
     "if-env": "^1.0.4",
     "is-ci": "^2.0.0",
     "jest": "^26.0.1",
     "jest-express": "^1.12.0",
-    "jest-runner-eslint": "^0.8.0",
+    "jest-runner-eslint": "^0.9.0",
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2"
