:pencil2: Change MONGODB_URL env variable to MONGO_URL
This is more common and consistent with variables by libraries like @shelf/jest-mongodb

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,4 @@ PORT=8080
 HOST="localhost"
 
 # The MongoDB connection string (more information here: https://docs.mongodb.com/manual/reference/connection-string/)
-MONGODB_URL="mongodb://localhost:27017/example"
+MONGO_URL="mongodb://localhost:27017/example"
