--- a/package.json
+++ b/package.json
@@ -5,15 +5,12 @@
   "author": "Antoine Colmard <a.colmard@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "if-env NODE_ENV=production && yarn start:production || yarn start:development",
-    "start:development": "nodemon --exec \"babel-node src/index.js\"",
+    "start": "nodemon --exec \"babel-node src/index.js\"",
     "prebuild": "rimraf dist",
     "build": "babel src --out-dir dist --ignore \"src/**/*.spec.js\",\"src/**/*.test.js\"",
-    "prestart:production": "yarn build",
-    "start:production": "cross-env NODE_ENV=production node dist/index.js",
-    "test": "is-ci && jest --ci || jest --watchAll",
-    "lint": "eslint src",
-    "format": "prettier --write src/**/*.js"
+    "serve": "cross-env NODE_ENV=production node dist/index.js",
+    "test": "is-ci && jest --ci || jest --watch",
+    "lint": "eslint src"
   },
   "dependencies": {
     "@hapi/boom": "^9.1.0",
