--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "jest-runner-eslint": "^0.9.0",
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "supertest": "^4.0.2"
   },
   "babel": {
     "presets": [
