--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,40 +1,37 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: Node.js CI
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
         node-version: [12.x, 14.x]
+        mongodb-version: [4.0, 4.2]
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: Install dependencies
-      uses: Borales/actions-yarn@v2.1.0
-      with:
-        cmd: install
-    - name: Build
-      uses: Borales/actions-yarn@v2.1.0
-      with:
-        cmd: build
-    - name: Test
-      uses: Borales/actions-yarn@v2.1.0
-      with:
-        cmd: test
-      env:
-        CI: true
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Use MongoDB ${{ matrix.mongodb-version }}
+        uses: supercharge/mongodb-github-action@1.3.0
+        with:
+          mongodb-version: ${{ matrix.mongodb-version }}
+      - name: Install dependencies
+        uses: Borales/actions-yarn@v2.1.0
+        with:
+          cmd: install
+      - name: Build
+        uses: Borales/actions-yarn@v2.1.0
+        with:
+          cmd: build
+      - name: Test
+        uses: Borales/actions-yarn@v2.1.0
+        with:
+          cmd: test
+        env:
+          CI: true
