--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.6",
+    "@babel/eslint-parser": "^7.11.5",
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.11.5",
     "cross-env": "^7.0.2",
@@ -60,6 +61,7 @@
     ]
   },
   "eslintConfig": {
+    "parser": "@babel/eslint-parser",
     "extends": [
       "eslint:recommended",
       "plugin:import/errors",
@@ -67,10 +69,6 @@
       "plugin:jest/recommended",
       "plugin:prettier/recommended"
     ],
-    "parserOptions": {
-      "sourceType": "module",
-      "ecmaVersion": 2020
-    },
     "env": {
       "node": true,
       "es6": true
