♻ Avoid mutating input when sanitizing the request body

--- a/package.json
+++ b/package.json
@@ -69,6 +69,14 @@
       "plugin:jest/recommended",
       "plugin:prettier/recommended"
     ],
+    "rules": {
+      "no-unused-vars": [
+        "warn",
+        {
+          "ignoreRestSiblings": true
+        }
+      ]
+    },
     "env": {
       "node": true,
       "es6": true
