--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "author": "Antoine Colmard <a.colmard@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon --exec \"babel-node -r dotenv/config src/index.js\"",
+    "start": "nodemon --exec \"babel-node -r dotenv-defaults/config src/index.js\"",
     "build": "babel src --delete-dir-on-start --out-dir dist --ignore \"src/**/*.test.js\"",
-    "serve": "cross-env NODE_ENV=production node -r dotenv/config dist/index.js",
+    "serve": "cross-env NODE_ENV=production node -r dotenv-defaults/config dist/index.js",
     "test": "is-ci && jest --ci || jest --watch",
     "lint": "eslint src",
     "coverage": "jest --coverage"
@@ -17,7 +17,7 @@
     "@types/jest": "^26.0.17",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv-defaults": "^2.0.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^5.2.3",
